--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
     <div class="jumbotron">
      <div class="kotak">
-      <svg xmlns="http://www.w3.org/2000/svg" class="mt-5" viewBox="0 0 1440 320"><path fill="white" fill-opacity="1" d="M0,160L48,181.3C96,203,192,245,288,229.3C384,213,480,139,576,96C672,53,768,43,864,48C960,53,1056,75,1152,80C1248,85,1344,75,1392,69.3L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
-      <h1 class="text-center text-warning"><span id="typed"></span></h1>
-      <p class="text-warning fst-italic fw-bold text-center"><span id="otomatis"></span></p>
+       <br><br>
+      <h1 class="text-center text-warning mt-5"><span id="typed"></span></h1>
+      <p class="text-warning fst-italic fw-bold text-center mt-5"><span id="otomatis"></span></p>
      </div>
     </div> 
 
@@ -140,10 +140,9 @@
       </form>
     </div>
 
-    <div class="footer bg-dark text-white mt-5 p-5" style="height:300px;">
-      <p class="text-center">Portofolio By <img src="https://img.icons8.com/metro/26/fa314a/filled-like.png"/><a href="#" style="text-decoration:none;color:white;font-style:italic;">Ahmad Hidayah</a></p>
+    <div class="footer bg-dark text-white mt-5 p-5">
+      <p class="text-center">Portofolio By <img src="https://img.icons8.com/metro/26/fa314a/filled-like.png"/><a href="https://www.instagram.com/ach_hidayah/" style="text-decoration:none;color:white;font-style:italic;">Ahmad Hidayah</a></p>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" style="margin-top:-200px;position:absolute;" viewBox="0 0 1440 320"><path fill="white" fill-opacity="1" d="M0,0L48,26.7C96,53,192,107,288,149.3C384,192,480,224,576,208C672,192,768,128,864,85.3C960,43,1056,21,1152,32C1248,43,1344,85,1392,106.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
