--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div> 
 
     <div class="container mt-5" id="tentang">
-      <div class="col-md-12">
+      <div class="col-sm-12">
         <h2 class="text-center fw-bold fst-italic">Tentang</h2>
         <hr style="width:100px;margin:auto;color:rgb(255, 187, 0);height:4px;">
         <p class="text-center mt-2 fst-italic">Saya adalah mahasiswa di Universitas Madura fakultas Ekonomi prodi Akutansi. Saya juga seorang web developer di bagian frontend developer. Saya adalah programmer pemula yang sudah menguasai setidaknya 3 bahasa pemrogramman. Bahasa pemrogramman yang saya kuasai HTML, CSS dan Javascript serta framework boostrap dan jquery.</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="container mt-5">
-      <div class="col-md-12">
+      <div class="col-sm-12">
         <h4 class="text-center fst-italic fw-bold text-warning">Cerita saya ketika menjadi programmer pemula</h4>
         <p class="text-center fst-italic mt-3">Waktu itu masuk kuliah masih kurang 1 bulan. Ketika itu saya merasa tidak punya kegiatan sama sekali sehingga saya berinisiatif untuk mencoba hal baru dari youtube. Awalnya saya tertarik di dunia haacker tetapi saya lihat ada pekerjaan yang tidak kalah hebat dari hacker. Pekerjaan tersebut diantaranya ada web developer,data engeener,UI/UX desaign, dan SEO IT. Saya cari tahu satu persatu sehingga saya lebih tertarik di web developer bagian frontend developer. Pertama yang saya lakukan, saya mencari tahu skill apa yang dibutuhkan oleh seorang frontend developer. Setelah itu, saya belajar bahasa pemrogramman seperti HTML,CSS DAN Javascript. 1 bulan saya belajar html dan 2 bulan saya belajar css. Disitulah saya mulai membuat web sederhana saya. Karena html dan css menurut saya kurang responsif terhadap layar user pengguna maka saya belajar framework css untuk mempermudah saya dalam mengerjakan kodingan saya yaitu bootstrap. Setelah saya belajar bootstarp saya belajar javascript selama 2 bulan dan alhamdulillah saya bisa menggunakan 3 bahasa pemrogramman dan 1 framework css ke dalam web projek saya.</p>
         <p class="text-center fw-bold mt-5 fst-italic">AHMAD HIDAYAH</p>
@@ -111,27 +111,27 @@
       <hr style="width:100px;height:4px;margin:auto;color:rgb(229, 12, 236);">
       <form>
         <div class="row mt-5">
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <div class="form-group">
               <input type="text" placeholder="Nama Depan">
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <div class="form-group">
               <input type="text" placeholder="Nama Belakang">
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-sm-12">
             <div class="form-group">
               <input type="email" placeholder="Email">
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-sm-12">
             <div class="from-group">
               <textarea placeholder="Masukkan Pesan"></textarea>
             </div>
           </div>
-          <div class="col-md-12">
+          <div class="col-sm-12">
             <div class="form-group">
               <button type="submit" class="btn btn-primary mt-3 rounded-pill" style="margin-left:100px;">KIRIM</button>
             </div>
@@ -140,7 +140,7 @@
       </form>
     </div>
 
-    <div class="footer bg-dark text-white mt-5 p-5">
+    <div class="col-sm-12 bg-dark text-white mt-5 p-5">
       <p class="text-center">Portofolio By <img src="https://img.icons8.com/metro/26/fa314a/filled-like.png"/><a href="https://www.instagram.com/ach_hidayah/" style="text-decoration:none;color:white;font-style:italic;">Ahmad Hidayah</a></p>
     </div>
 
