--- a/index.html
+++ b/index.html
@@ -54,33 +54,35 @@
   </head>
   <body>
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="font-family:chilanka;">Ahmad Hidayah</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#tentang">Tentang</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Layanan</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#galeri">Galeri</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#kontakkami">Kontak Kami</a>
-              </li>
-            </ul>
-          </div>
+      <div class="container">
+        <div class="col-sm-12">
+          <nav class="navbar navbar-expand-lg navbar-light bg-warning fixed-top">
+              <a class="navbar-brand" href="#" style="font-family:chilanka;">Ahmad Hidayah</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#tentang">Tentang</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Layanan</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#galeri">Galeri</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#kontakkami">Kontak Kami</a>
+                  </li>
+                </ul>
+              </div>
+          </nav>
         </div>
-      </nav>
+      </div>
 
     <div class="jumbotron">
      <div class="kotak">
