--- a/index.html
+++ b/index.html
@@ -37,16 +37,12 @@
         border:none;
         outline:none;
         border-bottom:1px solid rgb(229, 12, 236);
-        width:300px;
-        margin-left:100px;
         margin-top:10px;
       }
-      textarea {
+      #kontakkami textarea {
         border:none;
         outline:none;
         border-bottom:1px solid rgb(229, 12, 236);
-        width:300px;
-        margin-left:100px;
         margin-top:10px;
       }
      
@@ -100,7 +96,7 @@
       </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-5 bg-light p-3">
       <div class="col-sm-12">
         <h4 class="text-center fst-italic fw-bold text-warning">Cerita saya ketika menjadi programmer pemula</h4>
         <p class="text-center fst-italic mt-3">Waktu itu masuk kuliah masih kurang 1 bulan. Ketika itu saya merasa tidak punya kegiatan sama sekali sehingga saya berinisiatif untuk mencoba hal baru dari youtube. Awalnya saya tertarik di dunia haacker tetapi saya lihat ada pekerjaan yang tidak kalah hebat dari hacker. Pekerjaan tersebut diantaranya ada web developer,data engeener,UI/UX desaign, dan SEO IT. Saya cari tahu satu persatu sehingga saya lebih tertarik di web developer bagian frontend developer. Pertama yang saya lakukan, saya mencari tahu skill apa yang dibutuhkan oleh seorang frontend developer. Setelah itu, saya belajar bahasa pemrogramman seperti HTML,CSS DAN Javascript. 1 bulan saya belajar html dan 2 bulan saya belajar css. Disitulah saya mulai membuat web sederhana saya. Karena html dan css menurut saya kurang responsif terhadap layar user pengguna maka saya belajar framework css untuk mempermudah saya dalam mengerjakan kodingan saya yaitu bootstrap. Setelah saya belajar bootstarp saya belajar javascript selama 2 bulan dan alhamdulillah saya bisa menggunakan 3 bahasa pemrogramman dan 1 framework css ke dalam web projek saya.</p>
@@ -108,34 +104,34 @@
       </div>
     </div>
 
-    <div class="container" id="kontakkami" style="margin-top:150px;">
+    <div class="container" id="kontakkami" style="margin-top:150px;width:50%;">
       <h5 class="text-center fw-bold fst-italic" style="color:rgb(229, 12, 236);">Kontak Kami</h5>
       <hr style="width:100px;height:4px;margin:auto;color:rgb(229, 12, 236);">
       <form>
         <div class="row mt-5">
-          <div class="col-sm-6">
+          <div class="col-sm-12">
             <div class="form-group">
-              <input type="text" placeholder="Nama Depan">
+              <input type="text" placeholder="Nama Depan" class="form-control">
             </div>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-12 mx-auto">
             <div class="form-group">
-              <input type="text" placeholder="Nama Belakang">
+              <input type="text" placeholder="Nama Belakang" class="form-control">
             </div>
           </div>
           <div class="col-sm-12">
             <div class="form-group">
-              <input type="email" placeholder="Email">
+              <input type="email" placeholder="Email" class="form-control">
             </div>
           </div>
           <div class="col-sm-12">
             <div class="from-group">
-              <textarea placeholder="Masukkan Pesan"></textarea>
+              <textarea placeholder="Masukkan Pesan" class="form-control"></textarea>
             </div>
           </div>
           <div class="col-sm-12">
             <div class="form-group">
-              <button type="submit" class="btn btn-primary mt-3 rounded-pill" style="margin-left:100px;">KIRIM</button>
+              <button type="submit" class="btn btn-primary mt-3 rounded-pill form-control">KIRIM</button>
             </div>
           </div>
         </div>
